...
    private func setupScreen() {
        currencyTableView.delegate = self
        currencyTableView.dataSource = self
        currencySearchBar.delegate = self
        
        // set accessibilityIdentifier for UI Test
        currencyTableView.accessibilityIdentifier = "CurrencyList_table"
        currencySearchBar.accessibilityIdentifier = "CurrencyList_seachBar"
    }
    
    override func viewWillDisappear(_ animated: Bool) {
        super.viewWillDisappear(animated)
        
        // call viewWillAppear in parent screen
...
